[package]
name = "rdp"
version = "0.12.3"
authors = ["Stephan Hügel <urschrei@gmail.com>"]
description = "An FFI wrapper for the Ramer–Douglas–Peucker and Visvalingam-Whyatt algorithms"
readme = "README.md"
keywords = ["geo", "Ramer", "Douglas-Peucker", "Visvalingam-Whyatt"]
documentation = "https://docs.rs/rdp"
homepage = "https://crates.io/crates/rdp"
repository = "https://github.com/urschrei/rdp"
license = "MIT"
edition = "2021"

[dependencies]
libc = "0.2.79"
geo = "0.19.0"
geo-types = "0.7.0"
num-traits = "0.2.12"

[dev-dependencies]
criterion = "0.3"

[build-dependencies]
cbindgen = "0.20.0"

[features]
headers = []

[lib]
name = "rdp"
crate-type = ["cdylib"]
test = true
doctest = false
doc = true

[profile.release]
lto = true
codegen-units = 1

[[bench]]
name = "benches"
harness = false
