[package]
name = "rdp"
version = "0.12.11"
authors = ["Stephan Hügel <urschrei@gmail.com>"]
description = "An FFI wrapper for the Ramer–Douglas–Peucker and Visvalingam-Whyatt algorithms"
readme = "README.md"
keywords = ["geo", "Ramer", "Douglas-Peucker", "Visvalingam-Whyatt"]
documentation = "https://docs.rs/rdp"
homepage = "https://crates.io/crates/rdp"
repository = "https://github.com/urschrei/rdp"
license = "MIT"
edition = "2021"

[dependencies]
libc = "0.2.147"
geo = "0.28.0"
geo-types = "0.7.13"
num-traits = "0.2.15"

[dev-dependencies]
criterion = "0.4"

[build-dependencies]
cbindgen = "0.26.0"

[features]
headers = []

[lib]
name = "rdp"
crate-type = ["cdylib"]
test = true
doctest = false
doc = true

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bench]]
name = "benches"
harness = false
