[package]
name = "rdp"
version = "0.14.3"
authors = ["Stephan Hügel <urschrei@gmail.com>"]
description = "An FFI wrapper for the Ramer–Douglas–Peucker and Visvalingam-Whyatt algorithms"
readme = "README.md"
keywords = ["geo", "Ramer", "Douglas-Peucker", "Visvalingam-Whyatt"]
documentation = "https://docs.rs/rdp"
homepage = "https://crates.io/crates/rdp"
repository = "https://github.com/urschrei/rdp"
license = "MIT"
edition = "2021"

[dependencies]
libc = "0.2.174"
geo = "0.31.0"
geo-types = "0.7.13"
num-traits = "0.2.19"

[dev-dependencies]
criterion = "0.7"

[build-dependencies]
cbindgen = "0.29.0"

[features]
headers = []

[lib]
name = "rdp"
crate-type = ["cdylib"]
test = true
doctest = false
doc = true

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bench]]
name = "benches"
harness = false
